fix: 編集ページと追加ページでフォームを使いまわせるようにするため、APIのスキーマを変更
